--- a/menu.css
+++ b/menu.css
@@ -12,10 +12,23 @@ nav a {
   line-height: 50px;
   height: 50px;
 }
+nav li {
+  /*position: relative;*/
+  display: inline-block;
+}
 nav li a {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
+  color: #ffffff;
+  text-align: center;
+  padding: 14.5px 16px;
+  text-decoration: none;
+}
+nav li a:hover {
+  /*color: #597812;*/
+  color: #ffd400;
+  font-weight: normal;
 }
 nav li:last-child a {
   border-right: 0;
@@ -36,21 +49,7 @@ html {
   background-color: #333;
   text-align: center;
 }
-li {
-  /*position: relative;*/
-  display: inline-block;
-}
-li a {
-  color: #ffffff;
-  text-align: center;
-  padding: 14.5px 16px;
-  text-decoration: none;
-}
-li a:hover {
-  /*color: #597812;*/
-  color: #ffd400;
-  font-weight: normal;
-}
+
 .menu {
   width: 5000px;
   height: 50px;
